# bitcoin_scalper

./: .coverage  .coveragerc  .dvcignore  .gitignore  ANALYSE_PROJET.md  ANSWER.md  ARCHITECTURE_VISUAL.txt  AUDIT_REPORT.md  BINANCE_MIGRATION.md  CHECKLIST_ML_TRADING_BITCOIN.md  CHECKLIST_ML_TRADING_BITCOIN_AUDITED.md  DASHBOARD_RECONSTRUCTION_SUMMARY.md  DASHBOARD_SYNC_SUMMARY.md  DATA_DOWNLOAD_GUIDE.md  Dockerfile  ENGINE_INTEGRATION_SUMMARY.md  FICHE D’EXÉCUTION PARFAITE POUR CURSOR – BOT DE TRADING BTCUSD (AVATRADE MT5).txt  FINAL_VERIFICATION.md  FIX_SUMMARY.md  FORENSIC_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_METAMODEL.md  IMPLEMENTATION_SUMMARY_META_THRESHOLD.md  IMPLEMENTATION_SUMMARY_PAPER_TRADING.md  IMPLEMENTATION_SUMMARY_SECTION2.md  IMPLEMENTATION_SUMMARY_SECTION3.md  IMPLEMENTATION_SUMMARY_SECTION4.md  IMPLEMENTATION_SUMMARY_SECTION7.md  LICENSE  MIGRATION.md  Makefile  PAPER_TRADING_FIXES_SUMMARY.md  PROJECT_RESTRUCTURING_SUMMARY.md  Procfile  README.md  ROADMAP.md  SECTION7_CHECKLIST.md  SECURITY_SUMMARY.md  SECURITY_SUMMARY_DASHBOARD_SYNC.md  SECURITY_SUMMARY_METAMODEL.md  (+84 more)
.streamlit/: config.toml
Archive/: .gitignore  3.8'  README.md  purge_unused_files.bat  requirements.txt
adversarial/: market_generator.py
app/: __init__.py  main.md  main.py  ui.components.py
backtest/: backtest_engine.py
backtest_reports/: backtest_report.json  metrics.json
bitcoin_scalper/: __init__.py  main.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
config/: .env.example  README.md  __init__.py  backtest_config.json  config.yaml  engine_config.yaml  notifier_config.json  scalper_config.py  settings.py  unified_config.json  unified_config.py
core/: crash_handler.py  data_fetcher.py  mt5_connector.py  order_executor.py  partial_fill_handler.py  position_manager.py  risk_manager.py
dashboard/: app.py
data/: BTCUSDC_d.csv  BTCUSDP_d.csv  BTCUSDT_d.csv  augmentation.py  bot_state.json  clean.dvc  feature_selection.py  synthetic_ohlcv.py
docker/: Dockerfile  docker-compose.yml
docs/: DATA_LOADING_FORMATS.md  DATA_PIPELINE_IMPLEMENTATION.md  DATA_PIPELINE_SUMMARY.md  DATA_REQUIREMENTS.md  GUIDE_RAPIDE_TRAINING.md  MASTER_CHECKLIST_VALIDATION.md  METAMODEL.md  META_THRESHOLD_FLOW.md  Makefile  README_TRAINING.md  REPONSE_TRAINING.md  VALIDATION_RISK_README.md  components.md  conf.py  index.md  index.rst  roadmap_ml_training.md  scalability.md
examples/: binance_demo.py  labeling_integration_example.py  meta_model_integration.py  models_labeling_integration.py  run_backtest.py  validation_risk_integration.py
exchange/: avatrader_mt5.py
indicators/: __init__.py  atr.py  bollinger_bands.py  macd.py  rsi.py
k8s/: k8s-mt5-rest-deployment.yaml  k8s-web-deployment.yaml
logs/: trading_logs_20250510.txt
ml_reports/: cv_folds.json  metrics.json  split_report.json
models/: __init__.py  latest_features_list.pkl  meta_model_production.pkl  order.py  positions_model.py  train_reference.pkl
regime_detection/: hmm_regime.py
release/: CHANGELOG.md  GUIDE.md
reports/: trades.csv
results/: backtest_results.json
scripts/: README_TRAIN_META.md  check_filevault.sh  check_firewall.sh  check_password_key.py  check_python_version.py  decrypt_config.py  dvc_utils.py  encrypt_config.py  export_mt5_btc_history.py  fix_missing_minutes.py  migrate_config_to_password.py  mt5_rest_server.py  prepare_features.py  train.py  train_meta_model.py  verify_meta_threshold_flow.py
(+665 files in other folders)
